--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Aclonica&family=Josefin+Sans:wght@300;400&family=Noto+Sans+KR:wght@300;400;500;700;900&family=Oswald&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Aclonica&family=Hubballi&family=Josefin+Sans:wght@300;400&family=Noto+Sans+KR:wght@300;400;500;700;900&family=Oswald&display=swap"
       rel="stylesheet"
     />
     <title>React App</title>
